@@ -52,26 +52,27 @@ Perform an upload. If $remote is a directory the file will be uploaded to that d
    upload "localfile", "/path";
  };
 
+This function supports the following L<hooks|Rex::Hook>:
 
-This function supports the following hooks:
-
-=over 8
+=over 4
 
 =item before
 
-This gets executed before everything is done. The return value of this hook overwrite the original parameters of the function-call.
+This gets executed before anything is done. All original parameters are passed to it.
+
+The return value of this hook overwrites the original parameters of the function-call.
 
 =item before_change
 
-This gets executed right before the new file is written.
+This gets executed right before the new file is written. The local file name, and the remote file name are passed as parameters.
 
 =item after_change
 
-This gets executed right after the file was written.
+This gets executed right after the file was written. On top of the local file name, and the remote file name, any returned results are passed as parameters.
 
 =item after
 
-This gets executed right before the upload() function returns.
+This gets executed right before the C<upload()> function returns. All original parameters, and any results returned are passed to it.
 
 =back
 
